--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
 		<artifactId>spring-boot-dependencies</artifactId>
 		<version>2.7.17</version>
 	</parent>
-
+	<groupId>cn.sparrowmini</groupId>
 	<artifactId>sparrow-common</artifactId>
-	<version>0.7.0</version>
+	<version>0.7.1</version>
 	<packaging>jar</packaging>
 	<properties>
 		<hibernate.version>5.6.5.Final</hibernate.version>
