--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<properties>
-		<hibernate.version>5.6.5.Final</hibernate.version>
+		<hibernate.version>7.0.0.Final</hibernate.version>
 		<junit-platform.version>5.3.1</junit-platform.version>
 		<typescript-generator.version>2.35.1025</typescript-generator.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
